--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -124,6 +124,19 @@ header{
     color: #757575;
 }
 
+/* Event Create page*/
+#event-create-container{
+    padding: 30px;
+}
+
+#event-create-container label{
+    font-weight: bold;
+}
+
+#event-create-container input, select, textarea{
+    font-size: 12px;
+}
+
 /* Footer */
 #footer{
     text-align: center;
