--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,6 +31,17 @@ header{
     border-color: #d28008;
 }
 
+/* msg */
+.msg{
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    width: 100%;
+    margin-bottom: 0;
+    text-align: center;
+    padding: 10px;
+}
+
 /* navbar */
 
 .navbar img {
@@ -61,6 +72,7 @@ header{
     height: 400px;
     padding: 50px;
     text-align: center;
+    width: 100%;
 }
 
 #search-container h1{
